<resources>
    <string name="app_name">Corona Stats</string>
    <string name="global_empty_result">-</string>
    <string name="global_recovered">Recovered</string>
    <string name="global_dead">Dead</string>
    <string name="global_cases">Cases</string>

    <string name="main_total_cases">Total Cases</string>
    <string name="main_last_updated">Last Updated: %s</string>


    <string name="country_cases">Cases\n%s</string>
    <string name="country_dead">Dead\n%s</string>
    <string name="country_recovered">Recovered\n</string>
    <string name="country_list">Country List</string>

    <string name="today">%s\nToday</string>
    <string name="active">%s\nActive</string>
    <string name="critical">%s\nCritical</string>

</resources>
