<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tableLayout">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/global_empty_result"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_total_cases_nb" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:fontFamily="monospace"
                    android:layout_height="40dp" android:gravity="center" android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/global_empty_result"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_dead_nb" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:fontFamily="monospace"
                    android:textColor="@color/colorAccent" android:layout_height="40dp" android:gravity="center"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/global_empty_result"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_recovered_nb" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:fontFamily="monospace"
                    android:textColor="@color/colorPrimary" android:layout_height="40dp" android:gravity="center"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/main_total_cases"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_total_cases" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:fontFamily="monospace"
                    android:textSize="12sp" android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/global_dead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_dead" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:fontFamily="monospace"
                    android:textColor="@color/colorAccent" android:textSize="12sp"/>
            <TextView
                    android:text="@string/global_recovered"
                    android:layout_width="47dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_recovered" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:fontFamily="monospace"
                    android:textColor="@color/colorPrimary" android:textSize="12sp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <View android:background="@android:color/black"
                  android:layout_width="match_parent"
                  android:layout_height="2dp" android:layout_weight="1" android:layout_marginTop="2dp"/>
        </TableRow>
    </TableLayout>
    <androidx.fragment.app.FragmentContainerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/fragment"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_updated" android:layout_marginBottom="1dp">
    </androidx.fragment.app.FragmentContainerView>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tv_updated"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginBottom="3dp" tools:text="Updated"
            android:textSize="10sp" android:textAllCaps="false" android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>