<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.country.CountryStatsFragment">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp" android:id="@+id/linearLayout3"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/global_empty_result"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tv_world_cases_nb" android:layout_weight="1"
                android:textAlignment="center" android:gravity="center" android:textSize="18sp"
                android:fontFamily="monospace" android:textColor="@android:color/black"
                android:background="@android:color/white"/>
        <TextView
                android:text="@string/global_cases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_world_cases" android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="monospace" android:textSize="16sp"
                android:textColor="@android:color/white" android:gravity="center"
                android:background="#5E5E5E"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp"
            android:id="@+id/linearLayout" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
    >
        <TextView
                android:text="@string/global_empty_result"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tv_world_deaths_nb" android:layout_weight="1"
                android:textAlignment="center" android:gravity="center" android:textSize="18sp"
                android:fontFamily="monospace" android:textColor="@color/colorAccent"
                android:background="@android:color/white"/>
        <TextView
                android:text="@string/global_dead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_world_deaths" android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="monospace" android:textSize="16sp"
                android:textColor="@android:color/white" android:gravity="center"
                android:background="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginTop="24dp"
            android:id="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/global_empty_result"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tv_world_recovered_nb" android:layout_weight="1"
                android:textAlignment="center" android:gravity="center" android:textSize="18sp"
                android:fontFamily="monospace" android:textColor="@color/colorPrimary"
                android:background="@android:color/white"/>
        <TextView
                android:text="@string/global_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_world_recovered" android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="monospace" android:textSize="16sp"
                android:textColor="@android:color/white" android:gravity="center"
                android:background="@color/colorPrimary"/>
    </LinearLayout>
    <ImageView
            android:layout_width="41dp"
            android:layout_height="48dp" tools:src="@tools:sample/avatars" android:id="@+id/iv_world_refresh"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_refresh_black_24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>