<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.country.CountryStatsFragment">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_country_name"
            tools:text="Lebanon" android:textColor="@android:color/black"
            android:textStyle="bold" android:textSize="30sp" android:fontFamily="monospace"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toStartOf="@+id/btn_change_country"
            android:layout_marginEnd="123dp" app:layout_constraintHorizontal_bias="0.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:background="@drawable/shape_cases_stat"
            android:layout_height="100dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp" android:id="@+id/linearLayout3"
            android:layout_marginTop="32dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
    >
        <TextView
                android:text="@string/global_empty_result"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tv_cases_nb" android:layout_weight="1"
                android:textAlignment="center" android:gravity="center" android:textSize="18sp"
                android:fontFamily="monospace"/>
        <TextView
                android:text="@string/global_cases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_cases" android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="monospace" android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"
            android:id="@+id/linearLayout" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginTop="24dp" android:padding="10dp" android:background="@drawable/shape_death_stat"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/linearLayout2">
        <TextView
                android:text="@string/global_empty_result"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tv_deaths_nb" android:layout_weight="1"
                android:textAlignment="center" android:gravity="center" android:textSize="18sp"
                android:fontFamily="monospace" android:textColor="@color/colorAccent"/>
        <TextView
                android:text="@string/global_dead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_deaths" android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="monospace" android:textSize="12sp"
                android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginTop="24dp"
            android:padding="10dp" android:background="@drawable/shape_recovered_stat" android:id="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.5">
        <TextView
                android:text="@string/global_empty_result"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tv_recovered_nb" android:layout_weight="1"
                android:textAlignment="center" android:gravity="center" android:textSize="18sp"
                android:fontFamily="monospace" android:textColor="@color/colorPrimary"/>
        <TextView
                android:text="@string/global_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_recovered" android:layout_weight="1"
                android:textAlignment="center" android:fontFamily="monospace" android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <Button
            android:text="Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_change_country"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>